# mango

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  inspect.cc  int.h  mango.cc  mango.h  meson.build
.github/workflows/: ci.yml
mango/: bits.h  common.h  int.h  mango.h  masked_bits.h  nat.h  ranged_int.h
mango/ct/: nat.h
mango/rt/: int.h
